<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="activity_main"
        android:enabled="true"
        android:icon="@drawable/activity1"
        android:shortcutShortLabel="@string/shortLabel1Shortcut"
        android:shortcutLongLabel="@string/longLabel1Shortcut"
        android:shortcutDisabledMessage="@string/disabledLabel1Shortcut">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="crazyj36.com.myapplication"
            android:targetClass="crazyj36.com.myapplication.MainActivity" />
        <categories android:name="android.shortcut.Activities"/>
    </shortcut>
    <shortcut
        android:shortcutId="activity_main2"
        android:enabled="true"
        android:icon="@drawable/activity2"
        android:shortcutShortLabel="@string/shortLabel2Shortcut"
        android:shortcutLongLabel="@string/longLabel2Shortcut"
        android:shortcutDisabledMessage="@string/disabledLabel2Shortcut">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="crazyj36.com.myapplication"
            android:targetClass="crazyj36.com.myapplication.Main2Activity" />
        <categories android:name="android.shortcut.Activities"/>
    </shortcut>
</shortcuts>

