<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/act1RootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/appbar" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/act1CoordinatorLayoutView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:id="@+id/scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="30dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:text="@string/bigText" />
                </HorizontalScrollView>

                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:scrollbars="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawableTop="@drawable/image"
                        android:text="@string/bigText2" />

                </androidx.core.widget.NestedScrollView>

                <Button
                    android:id="@+id/activity2Btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activityBtnTxt"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/dialogButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dialogBtnTxt"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/toastButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/toastBtnTxt"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/audioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/audioBtnTxt"
                    android:textAllCaps="false" />

                <TextView
                    android:id="@+id/songInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/songInfoTxt" />

                <EditText
                    android:id="@+id/numField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/numFldHint"
                    android:importantForAutofill="no"
                    android:inputType="phone"
                    tools:targetApi="o" />

                <Button
                    android:id="@+id/callButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/callBtnTxt"
                    android:textAllCaps="false" />

                <EditText
                    android:id="@+id/urlField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/urlFldHint"
                    android:importantForAutofill="no"
                    android:inputType="textUri"
                    android:textAllCaps="false"
                    tools:targetApi="o" />

                <Button
                    android:id="@+id/urlButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/urlBtnTxt"
                    android:textAllCaps="false" />

                <EditText
                    android:id="@+id/smsField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/smsFldHint"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    tools:targetApi="o" />

                <Button
                    android:id="@+id/smsButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/smsBtnTxt"
                    android:textAllCaps="false" />

                <Switch
                    android:id="@+id/switch1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/chkSwitchBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chkSwitchBtnTxt"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/notifyBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notifyBtnTxt"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/randomBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/randomBtnTxt"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/snackbarBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/snackbarBtnTxt"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/bottomSheetBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bottomSheetBtnTxt"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/vibBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vibBtnTxt"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/batBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/batBtnTxt"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/otherFuncBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="otherMethodsStringToast"
                    android:text="@string/otherFuncBtnTxt"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/hourBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="hourToast"
                    android:text="@string/hourBtnTxt"
                    android:textAllCaps="false" />

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="2"
                    android:rowCount="2">

                    <Button
                        android:id="@+id/grid1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/grid1BtnTxt" />

                    <Button
                        android:id="@+id/grid2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/grid2BtnTxt" />

                    <Button
                        android:id="@+id/grid3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/grid3BtnTxt" />

                    <Button
                        android:id="@+id/grid4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/grid4BtnTxt" />

                </GridLayout>

            </LinearLayout>
        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="16dp"
            android:src="@drawable/infoicon" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</LinearLayout>


