<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:padding="16dp" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutDialogCopyright" >
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goToGitTvTxt" >
    </TextView>

    <Button
        android:id="@+id/goToGitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="goToGit"
        android:text="@string/goToGitBtnTxt"
        android:textAllCaps="false" >
    </Button>

</LinearLayout>
