<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/act2RootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Main2Activity">

    <include layout="@layout/appbar"></include>

    <Button
        android:id="@+id/dialogImgBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialogImgBtnTxt"
        android:textAllCaps="false" />

    <ImageView
        android:id="@+id/imgColorBtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/imgColorBtnDesc"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/videoiconone" />

    <Switch
        android:id="@+id/imgColorMvSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/imgColorSwitchTxt" />

    <ListView
        android:id="@+id/listView1"
        android:layout_width="wrap_content"
        android:layout_height="200dp">
    </ListView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/chk1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <CheckBox
            android:id="@+id/chk2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvChkStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>